<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.a520.banking.MainActivity">

    <TextView
        android:id="@+id/textview_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_user_hint"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:drawableStart="@drawable/users"
                android:onClick="customersClick"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/customers"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:drawableStart="@drawable/deposit"
                android:onClick="depositClick"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/deposit"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:drawableStart="@drawable/withdraw"
                android:onClick="withdrawClick"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/withdraw"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:drawableStart="@drawable/transfer"
                android:onClick="transferClick"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/transfer"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:drawableStart="@drawable/delete"
                android:onClick="deleteUserClick"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/delete"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/button_logout"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:drawableStart="@drawable/log_out"
                android:onClick="logoutClick"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/log_out"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/textview_balance"
            android:text="@string/balance"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <TextView
            android:id="@id/textview_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_gridline"
            android:padding="10dp"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/won"
            android:textColor="@color/grey"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/bg_gridline"
        android:padding="10dp">

        <TextView
            android:id="@+id/textview_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textSize="18sp" />

    </ScrollView>

</LinearLayout>