<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.a520.banking.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:text="@string/profile"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/delete"
            android:onClick="deleteUserClick"
            android:paddingBottom="20dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:text="@string/delete"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button_logout"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/log_out"
            android:onClick="logoutClick"
            android:paddingBottom="20dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:text="@string/log_out"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/password"
            android:onClick="changePasswordClick"
            android:paddingBottom="20dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:text="@string/change_password"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/close"
            android:onClick="closeWindow"
            android:paddingBottom="20dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:text="@string/close"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</LinearLayout>
